<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_img_no_notes">Image show up if no notes found</string>
    <string name="txt_title">Title</string>
    <string name="txt_priority">Priority</string>
    <string name="txt_date">Date</string>
    <string name="txt_description">Description</string>
    <string name="content_fab_add_a_note">button add note</string>
    <string name="content_image_no_data">image if there is no noted</string>
    <string name="txt_search">Search</string>
    <string name="menu_prioriti_high">Prioriti High</string>
    <string name="menu_prioriti_low">Prioriti Low</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="txt_save">save</string>
    <string name="no_notes">No Notes</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_sort_by">Sort by</string>
</resources>