<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/txt_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/txt_sort_by">
                    <menu>
                        <item
                            android:id="@+id/menu_prioriti_high"
                            android:title="@string/menu_prioriti_high" />
                        <item
                            android:id="@+id/menu_prioriti_low"
                            android:title="@string/menu_prioriti_low"/>
                    </menu>
                </item>
            </group>
        </menu>

    </item>

    <item android:id="@+id/menu_delete_all"
        android:title="@string/menu_delete_all"
        app:showAsAction="never"/>

</menu>